--- a/react-admin/src/containers/user/login.scss
+++ b/react-admin/src/containers/user/login.scss
@@ -1,22 +1,33 @@
-.login-contrainer{
-  width:100%;
-  height:100%;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  background:url("../../images/bg.jpg");
-  background-size:100% auto;
-  .login-form{
-    width:350px;
-    background:#fff;
-    padding:20px 20px 0;
-    border-radius:10px;
-    .title{
-      font-size:20px;
-      padding-bottom:20px;
-    }
-  }
-  .login-form-button {
-    width: 100%;
-  }
+.login-contrainer {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: url("../../images/bg.jpg") repeat-y;
+	background-size: cover;
+	.login-form {
+		width: 300px;
+		background: rgba(255, 255, 255, .1);
+		border: 1px solid rgba(255, 255, 255, .1);
+		border-radius: 2px;
+		color: #fff;
+		.title {
+			font-size: 20px;
+			margin-bottom: 10px;
+			padding: 5px 10px 10px;
+			text-align: center;
+			border-bottom: 1px solid rgba(255, 255, 255, .05);
+			box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+		}
+		.content {
+			padding: 20px 20px 0;
+			input:-webkit-autofill {
+				box-shadow: 0 0 0 400px rgba(255, 255, 255, 1) inset;
+			}
+		}
+	}
+	.login-form-button {
+		width: 100%;
+	}
 }
