--- a/react-admin/src/style/App.less
+++ b/react-admin/src/style/App.less
@@ -1,58 +1,66 @@
-//公共样式
-a:focus{
-	text-decoration:none;
+html, body, #root {
+	background: #e7e7e7;
 }
+
+#root {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	height: 100%;
+}
+
+p {
+	margin: 0;
+	padding: 0;
+}
+
+//公共样式
+/*a:focus{
+	text-decoration:none;
+}*/
 //头部样式
-.header{
-	/*background:#0099FF;*/
-	padding:0 20px;
+.header {
+	background: #fff;
+	box-shadow: 0 5px 0 rgba(0, 0, 0, .3);
+	/*padding:0 20px;*/
 	.logo {
 		width: 180px;
 		height: 31px;
-		line-height:31px;
+		line-height: 31px;
 		margin: 16px 28px 16px 0;
 		float: left;
-		color:#fff;
-		text-align:center;
-		font-size:25px;
+		color: #fff;
+		text-align: center;
+		font-size: 25px;
 		text-shadow: 0 0 5px #fff;
 	}
-	.top-silder{
-		float:right;
+	.top-silder {
+		float: right;
 	}
-	.ant-dropdown-link{
-		color:#fff;
-		cursor:pointer;
+	.ant-dropdown-link {
+		color: #fff;
+		cursor: pointer;
 	}
-	.ant-menu-dark.ant-menu-horizontal{
-		/*background:#0099FF;*/
+	/*.ant-menu-dark.ant-menu-horizontal{
+		background:#0099FF;
 		.ant-menu-item-selected{
 			background-color:#2fadff;
 		}
-	}
+	}*/
 }
+
 //左侧样式
-.ant-layout-sider{
-	background:#363636;
-	.menuNav{
-		height:45px;
-		line-height:45px;
-		color:#fff;
-		padding-left:25px;
-		font-size:18px;
-		background-color:#d20000;
-		background: linear-gradient(to bottom, #353535, #232323);
-		.menuNav-jian{
-			float: right;
-			width:0;
-			height:0;
-			margin-top: 10px;
-			border-top:12px solid transparent;
-			border-bottom:12px solid transparent;
-			border-right: 15px solid #d6efff;
-		}
+.ant-layout-sider {
+	/*background:#363636;*/
+	.menuNav {
+		height: 50px;
+		line-height: 50px;
+		color: #fff;
+		padding-left: 25px;
+		font-size: 20px;
+		background-color: #1a2229;
 	}
-	.ant-layout-sider-children{
+	/*.ant-layout-sider-children{
 		height:auto;
 	}
 	.ant-menu{
@@ -73,10 +81,11 @@ a:focus{
 				}
 			}
 		}
-	}
+	}*/
 }
+
 /*右侧*/
-.ant-layout{
+/*.ant-layout{
 	display:flex;
 	.ant-layout-content{
 		flex:1;
@@ -94,8 +103,9 @@ a:focus{
 			margin-right:10px;
 		}
 	}
-}
+}*/
 /*表单*/
+/*
 .ant-table-bordered{
 	.ant-table-thead,.ant-table-tbody{
 		>tr{
@@ -114,4 +124,4 @@ a:focus{
 }
 .ant-btn{
 	height:30px;
-}
+}*/
