--- a/react-admin/src/style/App.less
+++ b/react-admin/src/style/App.less
@@ -1,4 +1,4 @@
-html, body, #root {
+/*html, body, #root {
 	background: #e7e7e7;
 }
 
@@ -12,7 +12,7 @@ html, body, #root {
 p {
 	margin: 0;
 	padding: 0;
-}
+}*/
 
 //公共样式
 /*a:focus{
@@ -20,8 +20,8 @@ p {
 }*/
 //头部样式
 .header {
-	background: #fff;
-	box-shadow: 0 5px 0 rgba(0, 0, 0, .3);
+	/*background: #fff;
+	box-shadow: 0 5px 0 rgba(0, 0, 0, .3);*/
 	/*padding:0 20px;*/
 	.logo {
 		width: 180px;
@@ -34,13 +34,13 @@ p {
 		font-size: 25px;
 		text-shadow: 0 0 5px #fff;
 	}
-	.top-silder {
+	/*.top-silder {
 		float: right;
 	}
 	.ant-dropdown-link {
 		color: #fff;
 		cursor: pointer;
-	}
+	}*/
 	/*.ant-menu-dark.ant-menu-horizontal{
 		background:#0099FF;
 		.ant-menu-item-selected{
@@ -52,14 +52,14 @@ p {
 //左侧样式
 .ant-layout-sider {
 	/*background:#363636;*/
-	.menuNav {
+	/*.menuNav {
 		height: 50px;
 		line-height: 50px;
 		color: #fff;
 		padding-left: 25px;
 		font-size: 20px;
 		background-color: #1a2229;
-	}
+	}*/
 	/*.ant-layout-sider-children{
 		height:auto;
 	}
