--- a/react-admin/src/style/App.less
+++ b/react-admin/src/style/App.less
@@ -1,3 +1,8 @@
+@import "~antd/lib/style/themes/default.less";
+@import './theme-file.less';
+@import "~antd/lib/style/core/index.less";
+@import "~antd/lib/style/components.less";
+
 /*html, body, #root {
 	background: #e7e7e7;
 }
