--- a/react-admin/src/style/App.less
+++ b/react-admin/src/style/App.less
@@ -1,7 +1,5 @@
-@import "~antd/lib/style/themes/default.less";
+@import "~antd/dist/antd.less";
 @import './theme-file.less';
-@import "~antd/lib/style/core/index.less";
-@import "~antd/lib/style/components.less";
 
 /*html, body, #root {
 	background: #e7e7e7;
