--- a/react-admin/src/style/App.less
+++ b/react-admin/src/style/App.less
@@ -1,17 +1,14 @@
 @import "~antd/dist/antd.less";
 @import './theme-file.less';
 
-/*html, body, #root {
-	background: #e7e7e7;
-}
-
 #root {
+	background: #e7e7e7;
 	display: flex;
 	flex-direction: column;
 	width: 100%;
 	height: 100%;
 }
-
+/*
 p {
 	margin: 0;
 	padding: 0;
