--- a/react-admin/src/style/theme-file.less
+++ b/react-admin/src/style/theme-file.less
@@ -1,9 +1,9 @@
 /**
 https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
  */
-@primary-color: #1890ff;                         // 全局主色
+@primary-color: #1ab394;                         // 全局主色
 @link-color: #1890ff;                            // 链接色
-@success-color: #52c41a;                         // 成功色
+@success-color: #1ab394;                         // 成功色
 @warning-color: #faad14;                         // 警告色
 @error-color: #f5222d;                           // 错误色
 @font-size-base: 14px;                           // 主字号
@@ -15,20 +15,23 @@ https://github.com/ant-design/ant-design/blob/master/components/style/themes/def
 @border-color-base: #d9d9d9;                     // 边框色
 @box-shadow-base: 0 2px 8px rgba(0, 0, 0, .15);  // 浮层阴影
 
-// Layout
-@layout-body-background         : #f0f2f5;
-@layout-header-background       : #001529;
-@layout-footer-background       : @layout-body-background;
-@layout-header-height           : 50px;
-@layout-header-padding          : 0;
-@layout-footer-padding          : 24px 50px;
-@layout-sider-background        : @layout-header-background;
-@layout-trigger-height          : 48px;
-@layout-trigger-background      : #002140;
-@layout-trigger-color           : #fff;
-@layout-zero-trigger-width      : 36px;
-@layout-zero-trigger-height     : 42px;
-// Layout light theme
-@layout-sider-background-light  : #fff;
-@layout-trigger-background-light: #fff;
-@layout-trigger-color-light     : @text-color;
+// Background color for `<body>`
+@body-background        : #d9e0e7;
+// Base background color for most components
+@component-background   : #fff;
+@font-family  : "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif,
+"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+@code-family            : "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
+@heading-color          : fade(#000, 85%);
+@text-color             : fade(#000, 65%);
+@text-color-secondary   : fade(#000, 45%);
+@heading-color-dark     : fade(#fff, 100%);
+@text-color-dark        : fade(#fff, 85%);
+@text-color-secondary-dark: fade(#fff, 65%);
+@font-variant-base      : tabular-nums;
+@font-size-base         : 14px;
+@font-size-lg           : @font-size-base + 2px;
+@font-size-sm           : 12px;
+@line-height-base       : 1.5;
+@border-radius-base     : 4px;
+@border-radius-sm       : 2px;
