--- a/react-admin/src/style/App.less
+++ b/react-admin/src/style/App.less
@@ -2,7 +2,6 @@
 @import './theme-file.less';
 
 #root {
-	background: #e7e7e7;
 	display: flex;
 	flex-direction: column;
 	width: 100%;
@@ -20,46 +19,32 @@ p {
 }*/
 //头部样式
 .header {
-	/*background: #fff;
-	box-shadow: 0 5px 0 rgba(0, 0, 0, .3);*/
-	/*padding:0 20px;*/
 	.logo {
 		width: 180px;
 		height: 31px;
 		line-height: 31px;
-		margin: 16px 28px 16px 0;
+		margin: 13px 28px 0;
 		float: left;
-		color: #fff;
+		color: #1ab394;
 		text-align: center;
-		font-size: 25px;
-		text-shadow: 0 0 5px #fff;
+		font-size: 16px;
 	}
-	/*.top-silder {
+	.top-silder {
 		float: right;
 	}
-	.ant-dropdown-link {
-		color: #fff;
-		cursor: pointer;
-	}*/
-	/*.ant-menu-dark.ant-menu-horizontal{
-		background:#0099FF;
-		.ant-menu-item-selected{
-			background-color:#2fadff;
-		}
-	}*/
 }
 
 //左侧样式
 .ant-layout-sider {
 	/*background:#363636;*/
-	/*.menuNav {
-		height: 50px;
+	.menuNav {
+		height: 70px;
 		line-height: 50px;
 		color: #fff;
 		padding-left: 25px;
 		font-size: 20px;
 		background-color: #1a2229;
-	}*/
+	}
 	/*.ant-layout-sider-children{
 		height:auto;
 	}
