--- a/react-admin/src/style/theme-file.less
+++ b/react-admin/src/style/theme-file.less
@@ -35,3 +35,42 @@ https://github.com/ant-design/ant-design/blob/master/components/style/themes/def
 @line-height-base       : 1.5;
 @border-radius-base     : 4px;
 @border-radius-sm       : 2px;
+
+
+// Layout
+@layout-body-background         : #d9e0e7;
+@layout-header-background       : #2d353c;
+@layout-footer-background       : @layout-body-background;
+@layout-header-height           : 55px;
+@layout-header-padding          : 0;
+@layout-footer-padding          : 24px 50px;
+@layout-sider-background        : @layout-header-background;
+@layout-trigger-height          : 48px;
+@layout-trigger-background      : #002140;
+@layout-trigger-color           : #fff;
+@layout-zero-trigger-width      : 36px;
+@layout-zero-trigger-height     : 42px;
+// Layout light theme
+@layout-sider-background-light  : #fff;
+@layout-trigger-background-light: #fff;
+@layout-trigger-color-light     : @text-color;
+
+// Menu
+// ---
+@menu-inline-toplevel-item-height: 40px;
+@menu-item-height: 40px;
+@menu-collapsed-width: 80px;
+@menu-bg: @component-background;
+@menu-popup-bg: @component-background;
+@menu-item-color: @text-color;
+@menu-highlight-color: @primary-color;
+@menu-item-active-bg: @item-active-bg;
+@menu-item-active-border-width: 3px;
+@menu-item-group-title-color: @text-color-secondary;
+// dark theme
+@menu-dark-color: @text-color-secondary-dark;
+@menu-dark-bg: @layout-header-background;
+@menu-dark-arrow-color: #fff;
+@menu-dark-submenu-bg: rgba(0,0,0,.1);
+@menu-dark-highlight-color: #fff;
+@menu-dark-item-active-bg: @primary-color;
