--- a/react-admin/src/style/App.less
+++ b/react-admin/src/style/App.less
@@ -1,24 +1,24 @@
 @import "~antd/dist/antd.less";
 @import './theme-file.less';
 
-#root {
+.table-vertical{
 	display: flex;
 	flex-direction: column;
+}
+@flex-auto: auto;
+
+#root {
+	&:extend(.table-vertical);
 	width: 100%;
 	height: 100%;
 }
-/*
-p {
-	margin: 0;
-	padding: 0;
-}*/
 
-//公共样式
-/*a:focus{
-	text-decoration:none;
-}*/
 //头部样式
 .header {
+	position: relative;
+	z-index: 1;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
+	background:#fff;
 	.logo {
 		width: 180px;
 		height: 31px;
@@ -32,81 +32,99 @@ p {
 	.top-silder {
 		float: right;
 	}
+	.ant-menu-horizontal{
+		border-bottom:none;
+	}
 }
 
 //左侧样式
 .ant-layout-sider {
 	/*background:#363636;*/
 	.menuNav {
-		height: 70px;
+		height: 50px;
 		line-height: 50px;
 		color: #fff;
 		padding-left: 25px;
 		font-size: 20px;
 		background-color: #1a2229;
 	}
-	/*.ant-layout-sider-children{
-		height:auto;
-	}
-	.ant-menu{
-		background: #363636;
-		.ant-menu-submenu{
-			&:not(:last-child){
-				.ant-menu-submenu-title{
-					box-shadow: 0 -1px 0 rgba(255, 255, 255, .1) inset;
-				}
-			}
-			.ant-menu-sub{
-				background: rgba(0,0,0,.1);
-				box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25) inset;
-			}
-			&.ant-menu-submenu-open{
-				.ant-menu-submenu-title{
-					box-shadow:none;
-				}
-			}
+	.ant-menu-dark{
+		.ant-menu-sub{
+			box-shadow:none;
 		}
-	}*/
+	}
 }
 
 /*右侧*/
-/*.ant-layout{
-	display:flex;
-	.ant-layout-content{
-		flex:1;
-		min-height:auto;
-		box-sizing: border-box;
-		overflow-y: auto;
+.ant-layout-content{
+	&:extend(.table-vertical);
+	.article-content{
+		flex:@flex-auto;
+		&:extend(.table-vertical);
 	}
+}
+.breadcrumb{
+	padding:10px 15px;
+	line-height: 45px;
 }
 .top-edit{
-	margin-bottom:20px;
-	overflow:hidden;
-	.ant-form-item{
-		margin-right:0;
-		&:not(:last-child){
-			margin-right:10px;
+	margin-top: 15px;
+	margin-bottom: 15px;
+	height: 46px;
+	line-height: 46px;
+}
+/* 盒子 */
+.com-box{
+	background:#fff;
+	flex:@flex-auto;
+	&:extend(.table-vertical);
+	&.fixed{
+		position:fixed;
+		z-index: 999;
+		left:0;
+		top:0;
+		right:0;
+		bottom:0;
+		width:100%;
+		height:100%;
+		&:extend(.table-vertical);
+	}
+	.title{
+		height:40px;
+		line-height:40px;
+		padding:0 15px;
+		color:#fff;
+		background-color:#242a30;
+		.edit{
+			float:right;
 		}
 	}
-}*/
+	.content{
+		&:extend(.table-vertical);
+		overflow: hidden;
+		transition-duration:.3s;
+		flex:@flex-auto;
+		&.plus-circle{
+			height: 0;
+			overflow: hidden;
+		}
+	}
+	//table
+	.table-list{
+		flex:@flex-auto;
+		margin: 0 15px 15px;
+		overflow-y:auto;
+	}
+}
 /*表单*/
-/*
-.ant-table-bordered{
-	.ant-table-thead,.ant-table-tbody{
-		>tr{
-			>td{
-				padding:10px;
-			}
-		}
-	}
-	.ant-table-tbody{
-		>tr{
-			>td{
-
-			}
+.ant-form {
+	.ant-form-item{
+		.ant-btn{
+			margin-top:-3px;
+			vertical-align: middle;
 		}
 	}
 }
-.ant-btn{
-	height:30px;
-}*/
+.ant-table-small > .ant-table-content > .ant-table-body > table > .ant-table-thead > tr > th{
+	background:#f8f8f8;
+}
