--- a/react-admin/src/style/theme-file.less
+++ b/react-admin/src/style/theme-file.less
@@ -19,8 +19,7 @@ https://github.com/ant-design/ant-design/blob/master/components/style/themes/def
 @body-background        : #d9e0e7;
 // Base background color for most components
 @component-background   : #fff;
-@font-family  : "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif,
-"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+@font-family  : Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,SimSun,sans-serif;
 @code-family            : "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
 @heading-color          : fade(#000, 85%);
 @text-color             : fade(#000, 65%);
@@ -42,8 +41,8 @@ https://github.com/ant-design/ant-design/blob/master/components/style/themes/def
 @layout-header-background       : #2d353c;
 @layout-footer-background       : @layout-body-background;
 @layout-header-height           : 55px;
-@layout-header-padding          : 0;
-@layout-footer-padding          : 24px 50px;
+@layout-header-padding          : 0 15px;
+@layout-footer-padding          : 10px 50px;
 @layout-sider-background        : @layout-header-background;
 @layout-trigger-height          : 48px;
 @layout-trigger-background      : #002140;
@@ -74,3 +73,15 @@ https://github.com/ant-design/ant-design/blob/master/components/style/themes/def
 @menu-dark-submenu-bg: rgba(0,0,0,.1);
 @menu-dark-highlight-color: #fff;
 @menu-dark-item-active-bg: @primary-color;
+
+// Table
+// --
+@table-header-bg: @background-color-light;
+@table-header-color: @heading-color;
+@table-header-sort-bg: @background-color-base;
+@table-body-sort-bg: rgba(0, 0, 0, .01);
+@table-row-hover-bg: @primary-1;
+@table-selected-row-bg: #fafafa;
+@table-expanded-row-bg: #fbfbfb;
+@table-padding-vertical: 10px;
+@table-padding-horizontal: 16px;
