--- a/react-admin/src/style/App.less
+++ b/react-admin/src/style/App.less
@@ -1,5 +1,15 @@
 @import "~antd/dist/antd.less";
 @import './theme-file.less';
+/*"plugins": [
+[
+"import",
+{
+"libraryName": "antd",
+"libraryDirectory": "es",
+"style": true
+}
+]
+]*/
 
 .table-vertical{
 	display: flex;
