--- a/react-admin/src/style/App.less
+++ b/react-admin/src/style/App.less
@@ -51,12 +51,32 @@
 .ant-layout-sider {
 	/*background:#363636;*/
 	.menuNav {
-		height: 50px;
-		line-height: 50px;
+		height: 60px;
 		color: #fff;
 		padding-left: 25px;
 		font-size: 20px;
 		background-color: #1a2229;
+		box-sizing: border-box;
+		.icon{
+			float:left;
+			font-size:25px;
+			margin-right:15px;
+			padding-top:17px;
+		}
+		.text{
+			padding-top:11px;
+			line-height: 20px;
+			overflow:hidden;
+			h2{
+				margin:0;
+				color:#fff;
+				font-size:16px;
+			}
+			p{
+				font-size:12px;
+				color:rgba(255,255,255,.6);
+			}
+		}
 	}
 	.ant-menu-dark{
 		.ant-menu-sub{
