--- a/react-admin/src/style/theme-file.less
+++ b/react-admin/src/style/theme-file.less
@@ -59,28 +59,28 @@ https://github.com/ant-design/ant-design/blob/master/components/style/themes/def
 @menu-inline-toplevel-item-height: 40px;
 @menu-item-height: 40px;
 @menu-collapsed-width: 80px;
-@menu-bg: @component-background;
+/*@menu-bg: @component-background;
 @menu-popup-bg: @component-background;
 @menu-item-color: @text-color;
 @menu-highlight-color: @primary-color;
 @menu-item-active-bg: @item-active-bg;
 @menu-item-active-border-width: 3px;
-@menu-item-group-title-color: @text-color-secondary;
+@menu-item-group-title-color: @text-color-secondary;*/
 // dark theme
-@menu-dark-color: @text-color-secondary-dark;
+/*@menu-dark-color: @text-color-secondary-dark;
 @menu-dark-bg: @layout-header-background;
 @menu-dark-arrow-color: #fff;
 @menu-dark-submenu-bg: rgba(0,0,0,.1);
 @menu-dark-highlight-color: #fff;
-@menu-dark-item-active-bg: @primary-color;
+@menu-dark-item-active-bg: @primary-color;*/
 
 // Table
 // --
-@table-header-bg: @background-color-light;
+/*@table-header-bg: @background-color-light;
 @table-header-color: @heading-color;
-@table-header-sort-bg: @background-color-base;
+@table-header-sort-bg: @background-color-base;*/
 @table-body-sort-bg: rgba(0, 0, 0, .01);
-@table-row-hover-bg: @primary-1;
+/*@table-row-hover-bg: @primary-1;*/
 @table-selected-row-bg: #fafafa;
 @table-expanded-row-bg: #fbfbfb;
 @table-padding-vertical: 10px;
