--- a/show-project/src/style/app.less
+++ b/show-project/src/style/app.less
@@ -1,2 +1,9 @@
 @import "~ant-design-vue/dist/antd.less";
 @import "theme-file.less";
+.main{
+	width:100%;
+	height:100%;
+	display:flex;
+	background:url("../images/bg2.jpg");
+	background-size:cover;
+}
