--- a/show-project/src/style/app.less
+++ b/show-project/src/style/app.less
@@ -7,3 +7,13 @@
 	background:url("../images/bg2.jpg");
 	background-size:cover;
 }
+/* header */
+.header-search{
+	background: none;
+	margin-top:13px;
+	input{
+		background:rgba(255,255,255,.1);
+		border-color:rgba(255,255,255,.1);
+		color:#fff;
+	}
+}
