--- a/show-project/src/style/theme-file.less
+++ b/show-project/src/style/theme-file.less
@@ -15,7 +15,7 @@
 // Background color for `<body>`
 @body-background        : none;
 // Base background color for most components
-@component-background   : none;
+/*@component-background   : none;*/
 @font-family  : "PingFang SC", "Hiragino Sans GB",
 "Microsoft YaHei", "MicrosoftYaHei", Arial, "Helvetica Neue", Helvetica, sans-serif;
 @code-family            : "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
