--- a/show-project/src/style/app.less
+++ b/show-project/src/style/app.less
@@ -17,3 +17,16 @@
 		color:#fff;
 	}
 }
+/* left-menu */
+.left-menu-title{
+	height:50px;
+	line-height: 50px;
+	margin-top:15px;
+	background:@primary-color;
+	color: #fff;
+	text-align: center;
+	font-size: 18px;
+}
+.left-menu{
+
+}
