--- a/show-project/src/style/theme-file.less
+++ b/show-project/src/style/theme-file.less
@@ -13,7 +13,7 @@
 @box-shadow-base: 0 2px 8px rgba(0, 0, 0, .15);  // 浮层阴影
 
 // Background color for `<body>`
-@body-background        : none;
+@body-background        : #f1f1f1;
 // Base background color for most components
 /*@component-background   : none;*/
 @font-family  : "PingFang SC", "Hiragino Sans GB",
